--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="ft0Ehrz6zoh4yyiBebslDQavtwS6Vl5CEx87hLdrUkE" />
     <title>RVS Price</title>
     <link rel="shortcut icon" href="./img/RVS_Price.png" type="image/tipo da imagem" />
   </head>
