--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="ft0Ehrz6zoh4yyiBebslDQavtwS6Vl5CEx87hLdrUkE" />
     <title>RVS Price</title>
-    <link rel="shortcut icon" href="./img/RVS_Price.png" type="image/tipo da imagem" />
+    <link rel="shortcut icon" href="./img/RVS_Price.webp" type="image/tipo da imagem" />
   </head>
   <body>
     <div id="Div_Para_Referencia_E_Criacao_React"></div>
