--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="ft0Ehrz6zoh4yyiBebslDQavtwS6Vl5CEx87hLdrUkE" />
-    <title>RVS Price</title>
+    <meta
+      name="description"
+      content="RVS Price . Site de comparação de Preço, compara os preços dos mercados em Riversul, e mostra a opção mais barata encontrada."
+    />
+    <title>RVS Price - Tela Inicial</title>
     <link rel="shortcut icon" href="./img/RVS_Price.webp" type="image/tipo da imagem" />
   </head>
   <body>
