Adição de metadados de palavra chave e author

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
       name="description"
       content="RVS Price . Site de comparação de Preço, compara os preços dos mercados em Riversul, e mostra a opção mais barata encontrada."
     />
+    <meta name="keywords" content="RVS Price, Comparador de Preço Riversul, Riversul Mercados" />
+     <meta name="author" content="RVS Price" />
     <title>RVS Price - Tela Inicial</title>
     <link rel="shortcut icon" href="./img/RVS_Price.webp" type="image/tipo da imagem" />
     <!-- Marcação JSON-LD gerada pelo Assistente de marcação para dados estruturados do Google. -->
