Alteração de ordem de Title

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
     <meta name="keywords" content="RVS Price, Comparador de Preço Riversul, Riversul Mercados" />
      <meta name="author" content="RVS Price" />
-    <title>RVS Price - Tela Inicial</title>
+    <title>Tela Inicial - RVS Price</title>
     <link rel="shortcut icon" href="./img/RVS_Price.webp" type="image/tipo da imagem" />
     <!-- Marcação JSON-LD gerada pelo Assistente de marcação para dados estruturados do Google. -->
     <script type="application/ld+json">
