Adição de direitos autorais direto no index

--- a/public/index.html
+++ b/public/index.html
@@ -236,5 +236,10 @@
   </head>
   <body>
     <div id="Div_Para_Referencia_E_Criacao_React"></div>
+     <footer>
+      <div className="Direitos_Autorais_RVS">
+        <p>© 2024 RVS Price. Todos os direitos reservados.</p>
+      </div>
+    </footer>
   </body>
 </html>
