Adição de estilo de direitos autorais no index

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,11 @@
      <meta name="author" content="RVS Price" />
     <title>Tela Inicial - RVS Price</title>
     <link rel="shortcut icon" href="./img/RVS_Price.webp" type="image/tipo da imagem" />
+    <style>.Direitos_Autorais_RVS {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}</style>
     <!-- Marcação JSON-LD gerada pelo Assistente de marcação para dados estruturados do Google. -->
     <script type="application/ld+json">
       [
