--- a/public/index.html
+++ b/public/index.html
@@ -242,7 +242,7 @@
   <body>
     <div id="Div_Para_Referencia_E_Criacao_React"></div>
      <footer>
-      <div className="Direitos_Autorais_RVS">
+      <div class="Direitos_Autorais_RVS">
         <p>© 2024 RVS Price. Todos os direitos reservados.</p>
       </div>
     </footer>
