Melhora de designe dos produtos

--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,16 @@
       content="RVS Price . Site de comparação de Preço, compara os preços dos mercados em Riversul, e mostra a opção mais barata encontrada."
     />
     <meta name="keywords" content="RVS Price, Comparador de Preço Riversul, Riversul Mercados" />
-     <meta name="author" content="RVS Price" />
+    <meta name="author" content="RVS Price" />
     <title>Tela Inicial - RVS Price</title>
     <link rel="shortcut icon" href="./img/RVS_Price.webp" type="image/tipo da imagem" />
-    <style>.Direitos_Autorais_RVS {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}</style>
+    <style>
+      .Direitos_Autorais_RVS {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    </style>
     <!-- Marcação JSON-LD gerada pelo Assistente de marcação para dados estruturados do Google. -->
     <script type="application/ld+json">
       [
@@ -241,7 +243,7 @@
   </head>
   <body>
     <div id="Div_Para_Referencia_E_Criacao_React"></div>
-     <footer>
+    <footer>
       <div class="Direitos_Autorais_RVS">
         <p>© 2024 RVS Price. Todos os direitos reservados.</p>
       </div>
