Adição de prioridade de carregamento de imagens

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
     <meta name="author" content="RVS Price" />
     <title>Tela Inicial - RVS Price</title>
     <link rel="shortcut icon" href="./img/RVS_Price.webp" type="image/tipo da imagem" />
+    <link rel="preload" as="image" href="./img/Oferta_Relampago.webp" />
+    <link rel="preload" as="image" href="./img/RVS_Price.webp" />
+    <link rel="preload" as="image" href="./img/" />
     <style>
       .Direitos_Autorais_RVS {
         display: flex;
