Adição de informações extras de schema

--- a/public/index.html
+++ b/public/index.html
@@ -240,6 +240,32 @@
             "@type": "Offer",
             "price": "R$1,99"
           }
+        },
+        {
+          "@context": "https://schema.org",
+          "@type": "LocalBusiness",
+          "name": "Mercados de Riversul",
+          "image": "https://rvsprice.vercel.app/img/RVS_Price.webp",
+          "@id": "https://rvsprice.vercel.app/",
+          "url": "https://rvsprice.vercel.app/",
+          "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Riversul",
+            "addressRegion": "SP",
+            "postalCode": "18470-000",
+            "addressCountry": "BR"
+          },
+          "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": -23.123456,
+            "longitude": -49.123456
+          },
+          "openingHoursSpecification": {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
+            "opens": "00:00",
+            "closes": "23:59"
+          }
         }
       ]
     </script>
