Melhora de descrição

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="google-site-verification" content="ft0Ehrz6zoh4yyiBebslDQavtwS6Vl5CEx87hLdrUkE" />
     <meta
       name="description"
-      content="RVS Price . Site de comparação de Preço, compara os preços dos mercados em Riversul, e mostra a opção mais barata encontrada."
+      content="RVS Price. Site de comparação de preços que compara os preços dos mercados em Riversul e mostra a opção mais barata encontrada."
     />
     <meta name="keywords" content="RVS Price, Comparador de Preço Riversul, Riversul Mercados" />
     <meta name="author" content="RVS Price" />
