Adição de icon no navegador de busca

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
     <meta name="keywords" content="RVS Price, Comparador de Preço Riversul, Riversul Mercados" />
     <meta name="author" content="RVS Price" />
     <title>Tela Inicial - RVS Price</title>
-    <link rel="shortcut icon" href="./img/RVS_Price.webp" type="image/tipo da imagem" />
+    <link rel="shortcut icon" href="./img/RVS_Price.webp" type="image/webp" />
+    <link rel="icon" href="./img/RVS_Price.webp" type="image/webp" />
     <link rel="preload" as="image" href="./img/Oferta_Relampago.webp" />
     <link rel="preload" as="image" href="./img/RVS_Price.webp" />
     <link rel="preload" as="image" href="./img/" />
